Add codecov, badges

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,5 +20,6 @@ RoxygenNote: 7.1.1
 Imports: 
     clipr
 Suggests: 
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    covr
 Config/testthat/edition: 3
