--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,24 +1,25 @@
 Package: dialga
-Title: Build Cron Strings From R Expressions
-Version: 0.0.0.9001
+Title: Build and Interpret Cron Strings with R
+Version: 0.0.0.9002
 Authors@R: 
     person(given = "Matt",
            family = "Dray",
            role = c("aut", "cre"),
            email = "mwdray@gmail.com")
-Description: Provide R objects as inputs and get a standard cron expression in
+Description: Provide R expressions as inputs and get a standard cron string in
     return. These strings are in a special format that's recognised by various
     systems that are designed to help you schedule computer tasks. It's easy to
     forget the required esoteric structure, hence the existence of web services
     like <https://crontab.guru/> and this package. 
-Bugs: https://github.com/matt-dray/dialga/issues
+BugReports: https://github.com/matt-dray/dialga/issues
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Imports: 
-    clipr
+    clipr,
+    stringr
 Suggests: 
     testthat (>= 3.0.0),
     covr
