--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,11 +6,12 @@ Authors@R:
            family = "Dray",
            role = c("aut", "cre"),
            email = "mwdray@gmail.com")
-Description: Provide R expressions as inputs and get a standard cron string in
-    return. These strings are in a special format that's recognised by various
-    systems that are designed to help you schedule computer tasks. It's easy to
-    forget the required esoteric structure, hence the existence of web services
-    like <https://crontab.guru/> and this package. 
+Description: Provide R integer vectors as inputs and get a standard cron string
+    in return. Cron strings are in a special format that's recognised by cron
+    software to help you schedule computer tasks. It's easy to forget the
+    required esoteric structure, hence the existence of web services like
+    <https://crontab.guru/> and this package. You can also supply a cron string
+    and get an English interpretation in return.
 BugReports: https://github.com/matt-dray/dialga/issues
 License: MIT + file LICENSE
 Encoding: UTF-8
