Refactor '/' handling, update status, simplify description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,14 @@
 Package: dialga
 Title: Build and Interpret Cron Strings with R
-Version: 0.1
+Version: 0.1.1
 Authors@R: 
     person(given = "Matt",
            family = "Dray",
            role = c("aut", "cre"),
            email = "mwdray@gmail.com")
 Description: Provide R integer vectors as inputs and get a standard cron string
-    in return. Cron strings are in a special format that's recognised by cron
-    software to help you schedule computer tasks. It's easy to forget the
-    required esoteric structure, hence the existence of web services like
-    <https://crontab.guru/> and this package. You can also supply a cron string
-    and get an English interpretation in return.
+    in return. You can also supply a cron string and get an English 
+    interpretation in return.
 BugReports: https://github.com/matt-dray/dialga/issues
 License: MIT + file LICENSE
 Encoding: UTF-8
